--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
             </plugin>
         </plugins>
     </build>
-    <name>proc-de-senales</name>
+    <name>proc-de-imagenes</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
