--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>rxjava</artifactId>
             <version>2.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>gov.nih.imagej</groupId>
+            <artifactId>imagej</artifactId>
+            <version>1.47</version>
+        </dependency>
     </dependencies>
 </project>
