--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,12 @@
             <artifactId>imagej</artifactId>
             <version>1.47</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
     </dependencies>
 </project>
